grafana/k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http-port
    protocol: TCP
    name: http-port
  selector:
    app: grafana
