grafana/k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  tls:
    - hosts:
        - "grafana.willbrid.com"
      secretName: willbridcom
  rules:
    - host: "grafana.willbrid.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
